buildscript {

    ext {
        kotlin_version = '1.3.71'
        junit_jupiter_version = '5.6.1'
        junit_plugin_version = '1.2.0'
        spek_version = '1.2.1'
        assertj_version = '3.9.1'
        kluent_version = '1.60'
        log4j_version = '2.11.1'
        commons_lang3_version = '3.10'

        kotlinter_gradle_plugin = '2.3.2'
        gradle_intellij_plugin = '0.4.18'
    }

    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath files('libs/ktlint-print-rule.jar')
        classpath "org.jmailen.gradle:kotlinter-gradle:$kotlinter_gradle_plugin"
        classpath "gradle.plugin.org.jetbrains.intellij.plugins:gradle-intellij-plugin:$gradle_intellij_plugin"
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
        classpath "org.junit.platform:junit-platform-gradle-plugin:$junit_plugin_version"
    }
}

plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.18'
}

repositories {
    mavenCentral()
    jcenter()
    maven { url "https://dl.bintray.com/spekframework/spek-dev" }
}

apply plugin: "org.jetbrains.intellij"
apply plugin: "java"
apply plugin: "kotlin"
apply plugin: "idea"
apply plugin: "jacoco"
apply plugin: "org.junit.platform.gradle.plugin"
apply plugin: "org.jmailen.kotlinter"

group 'org.piyush'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
    compile("org.jetbrains.kotlin:kotlin-reflect:$kotlin_version")
    compile("org.apache.commons:commons-lang3:$commons_lang3_version")
    compileOnly 'org.jetbrains.kotlin:kotlin-compiler:1.3.72'
    compile('org.elasticsearch.client:elasticsearch-rest-high-level-client:7.6.2')
    compile('org.buildobjects:jproc:2.3.0')

    testImplementation('org.spekframework.spek2:spek-dsl-jvm:2.0.10') {
        exclude group: 'org.jetbrains.kotlin'
    }
    testRuntimeOnly('org.spekframework.spek2:spek-runner-junit5:2.0.10') {
        exclude group: 'org.junit.platform'
        exclude group: 'org.jetbrains.kotlin'
    }
    testCompile("org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version")
    testRuntime("org.junit.jupiter:junit-jupiter-engine:$junit_jupiter_version")
    testCompile("com.nhaarman:mockito-kotlin:1.6.0")
    testImplementation "org.amshove.kluent:kluent:$kluent_version"
}

jacocoTestReport {
    reports {
        xml.enabled true
    }
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2020.1'
    pluginName "Big Browsky"
    intellij.updateSinceUntilBuild false
    type 'IC'
}

jacoco {
    toolVersion = '0.7.9'
    applyTo junitPlatformTest
}

junitPlatformTest {
    jacoco {
        destinationFile = file("${buildDir}/jacoco/test.exec")
    }
}

patchPluginXml {
    changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>"""
}
kotlinter {
    ignoreFailures = false
    indentSize = 4
    continuationIndentSize = 4
    reporters = ['checkstyle', 'plain']
    experimentalRules = false
    disabledRules = []
    fileBatchSize = 30
}